// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders correctly mandatory props only 1`] = `
<label
  className="root
        
        
        rootLayoutVertical
        
        rootSizeMedium
        
        rootVariantOutline"
  htmlFor="test"
  id="test__label"
>
  <div
    className="label"
    id="test__labelText"
  >
    label
  </div>
  <div
    className="inputContainer"
  >
    <select
      className="input"
      disabled={false}
      id="test"
      multiple={true}
      onChange={null}
      required={false}
      value={Array []}
    >
      <option
        id="test__item__ch1"
        key="ch1"
        value="ch1"
      >
        choice 1
      </option>
      <option
        id="test__item__ch2"
        key="ch2"
        value="ch2"
      >
        choice 2
      </option>
    </select>
  </div>
</label>
`;

exports[`rendering renders correctly only one option 1`] = `
<label
  className="root
        
        
        rootLayoutVertical
        
        rootSizeMedium
        
        rootVariantOutline"
  htmlFor="test"
  id="test__label"
>
  <div
    className="label"
    id="test__labelText"
  >
    label
  </div>
  <div
    className="inputContainer"
  >
    <select
      className="input"
      disabled={false}
      id="test"
      multiple={true}
      onChange={null}
      required={false}
      value={Array []}
    >
      <option
        id="test__item__ch1"
        key="ch1"
        value="ch1"
      >
        choice 1
      </option>
    </select>
  </div>
</label>
`;

exports[`rendering renders correctly with all props 1`] = `
<label
  className="root
        isRootFullWidth
        isRootInFormLayout
        rootLayoutHorizontal
        isRootRequired
        rootSizeLarge
        isRootStateInvalid
        rootVariantFilled"
  htmlFor="test"
  id="test__label"
>
  <div
    className="label
          isLabelHidden"
    id="test__labelText"
  >
    label
  </div>
  <div
    className="inputContainer"
  >
    <select
      className="input"
      disabled={true}
      id="test"
      multiple={true}
      onChange={null}
      required={true}
      value={
        Array [
          "ch1",
        ]
      }
    >
      <option
        id="test__item__ch1"
        key="ch1"
        value="ch1"
      >
        choice 1
      </option>
      <option
        disabled={true}
        id="test__item__ch2"
        key="ch2"
        value="ch2"
      >
        choice 2
      </option>
    </select>
    <div
      className="bottomLine"
    />
  </div>
  <div
    className="helperText"
    id="test__helperText"
  >
    some help
  </div>
</label>
`;

exports[`rendering renders correctly with one selected option 1`] = `
<label
  className="root
        
        
        rootLayoutVertical
        
        rootSizeMedium
        
        rootVariantOutline"
  htmlFor="test"
  id="test__label"
>
  <div
    className="label"
    id="test__labelText"
  >
    label
  </div>
  <div
    className="inputContainer"
  >
    <select
      className="input"
      disabled={false}
      id="test"
      multiple={true}
      onChange={null}
      required={false}
      value={
        Array [
          "ch1",
        ]
      }
    >
      <option
        id="test__item__ch1"
        key="ch1"
        value="ch1"
      >
        choice 1
      </option>
      <option
        id="test__item__ch2"
        key="ch2"
        value="ch2"
      >
        choice 2
      </option>
    </select>
  </div>
</label>
`;

exports[`rendering renders correctly with two selected options 1`] = `
<label
  className="root
        
        
        rootLayoutVertical
        
        rootSizeMedium
        
        rootVariantOutline"
  htmlFor="test"
  id="test__label"
>
  <div
    className="label"
    id="test__labelText"
  >
    label
  </div>
  <div
    className="inputContainer"
  >
    <select
      className="input"
      disabled={false}
      id="test"
      multiple={true}
      onChange={null}
      required={false}
      value={
        Array [
          "ch1",
          "ch2",
        ]
      }
    >
      <option
        id="test__item__ch1"
        key="ch1"
        value="ch1"
      >
        choice 1
      </option>
      <option
        id="test__item__ch2"
        key="ch2"
        value="ch2"
      >
        choice 2
      </option>
    </select>
  </div>
</label>
`;
